# sathop

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  release.yml
deploy/orchestrator/: .env.example  Dockerfile  docker-compose.yml
deploy/receiver/: .env.example  Dockerfile  docker-compose.yml
deploy/worker/: .env.example  Dockerfile  docker-compose.yml
frontend/: components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend-vue/: package-lock.json  package.json  vite.config.ts
frontend-vue/src/: App.vue  Layout.vue  api.ts  i18n.ts  main.ts  router.ts
frontend-vue/src/composables/: useAuthGate.ts
frontend-vue/src/pages/: BatchDetail.vue  BatchTimingCard.vue  Batches.vue  BundleManifestView.vue  CreateBatchCell.vue  CreateBatchCsvModal.vue  CreateBatchGranuleTable.vue  ErrorCell.vue  Events.vue  LatestProgressLine.vue  ProgressTimeline.vue  (+3 more)
frontend/scripts/: migrate-features.ps1  migrate-legacy-tokens.ps1  migrate-ui-relocate.ps1  rename-legacy-tokens.ps1  rewrite-actionbutton.ps1  rewrite-badge-imports.ps1  rewrite-card-simple.ps1
frontend/src/: App.tsx  App.vue  ErrorBoundary.tsx  Layout.tsx  Layout.vue  Login.vue  api.ts  apiTypes.ts  auth.tsx  credCache.ts  env.d.ts  i18n.ts  index.css  live.ts  main.ts  main.tsx  router.ts  toast.tsx  ui.tsx
frontend/tests/: i18n.test.ts  setup.ts  smoke.test.ts
src/sathop/: __init__.py
tests/: conftest.py  test_admin_stuck.py  test_batch_admin.py  test_batch_create_prefix.py  test_batch_credentials.py  test_batch_delete.py  test_batch_env.py  test_batch_eta.py  test_batch_granules.py  test_batch_summary_exhausted.py  test_bundle.py  test_bundle_registry.py  test_bundle_schema.py  test_downloader.py  test_events.py  test_events_source_filter.py  test_lease_backpressure.py  test_metrics.py  test_node_lifecycle.py  test_processor.py  test_progress.py  test_pull_failures.py  test_receiver_agent.py  test_receiver_heartbeat_stats.py  test_receiver_main.py  test_receiver_puller.py  test_retention.py  test_shared.py  test_spa_fallback.py  test_storage.py  test_stream.py  test_timing.py  test_validate_bundle.py  test_worker_progress.py  test_worker_shared.py  test_worker_state.py
(+186 files in other folders)
